# Skillbox

./: .gitignore
Module 8 homework/Задача 2. Полет нормальный!/: Задача 2. Полет нормальный!.cpp
Module 8 homework/Задача 5. Склонение русских слов/: Задача 5. Склонение русских слов.vcxproj
Module 8 homework/Задача 6. Усложнение задачи про кирпич/: Задача 6. Усложнение задачи про кирпич.vcxproj
Module 8 homework/Задача 8. Грустное совершеннолетие/: Задача 8. Грустное совершеннолетие.vcxproj.filters
Module 9 homework/Task 10/: Task 10.sln
Module 9 homework/Task 3/: Task 3.sln
Module-10-homework/Task-10/: Task-10.vcxproj.filters
Module-10-homework/Task-11/: Task-11.vcxproj.filters
Module-10-homework/Task-3/: Task-3.vcxproj
Module-10-homework/Task-8/: Task-8.sln
Module-10-homework/Task-9/: Task-9.sln
Module-10/Task-2/: Task-2.cpp
Module-10/Task-3/: Task-3.cpp
Module-10/Task-4/: Task-4.cpp  Task-4.vcxproj
Module-10/Task-5/: Task-5.vcxproj
Module-10/Task-7/: Task-7.cpp
Module-10/Task-9/: Task-9.cpp
Module-11/GPS/: GPS.cpp  (+3 more)
Module-32/32.5-Homework/Task-1/: CMakeLists.txt
Module-32/32.5-Homework/Task-1/include/: Record.h
Module-32/32.5-Homework/Task-1/src/: CMakeLists.txt  Record.cpp  main.cpp
Module-32/32.5-Homework/Task-2/: CMakeLists.txt  moviebase.json
Module-32/32.5-Homework/Task-2/include/: MovieBase.h  Record.h
Module-32/32.5-Homework/Task-2/src/: CMakeLists.txt  MovieBase.cpp  Record.cpp  main.cpp
Module-32/32.5-Homework/Task-3/: CMakeLists.txt  Task-3.cpp  Task-3.h  card.pb.cc  card.pb.h  card.proto
Task-4/: Task-4.sln
(+680 files in other folders)
