# CMakeList.txt: проект CMake для Task-3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("Task-3")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Task-3 "Task-3.cpp" "Task-3.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
